# perwar_ocr

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  config.toml  docker-compose.yml  implementation_plan.md  main.py  prewar_japanese_ocr_roadmap.md  pyproject.toml  requirements.txt
pkg/senzen_word/: README.md  pyproject.toml
pkg/senzen_word/src/senzen_word/: __init__.py
pkg/senzen_word/src/senzen_word/kana/: __init__.py  hentaigana.py  historical.py  katakana_particle.py
pkg/senzen_word/src/senzen_word/kana/data/: hentaigana.json
pkg/senzen_word/src/senzen_word/kanji/: __init__.py  converter.py
pkg/senzen_word/src/senzen_word/kanji/data/: jinmei.json  joyo_old_new.json  variants.json
pkg/senzen_word/tests/: test_convert.py  test_hentaigana.py  test_kana_historical.py  test_kana_particles.py  test_kanji.py
plan/: implementation_plan.md  improvement-ideas.md
scripts/: cli.py  diff_viewer.py  library.py  ocr_vision_llm.py  postprocess.py  setup_check.py
survey/: prewar_japanese_ocr_roadmap.md  戦前文字 → 現代文字 変換ライブラリ開発のための参考資料まとめ.md  戦前日本語OCR調査レポート.md
tests/: test_diff_viewer.py  test_image_preprocessor.py  test_progress.py  test_query_normalize.py
utils/: char_converter.py  config.py  image_preprocessor.py  kana_converter.py  katakana_particle_converter.py  library_search.py  library_writer.py  ollama_client.py  progress.py  screen_capture.py  text_modernizer.py  text_normalizer.py
