[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prewar-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jaconv>=0.5.0",
    "numpy>=2.4.2",
    "ollama>=0.6.1",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=10.4.0",
    "questionary>=2.1.1",
    "requests>=2.32.5",
    "senzen-word",
    "surya-ocr>=0.17.1",
]

[project.scripts]
prewar-ocr = "scripts.ocr_vision_llm:main"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "utils"]

[tool.uv.sources]
senzen-word = { workspace = true }

[tool.uv.workspace]
members = ["pkg/senzen_word"]
