[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "senzen-word"
version = "0.1.0"
description = "戦前日本語の旧字体・歴史的仮名遣い・カタカナ助詞・変体仮名を現代日本語に変換"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = []
keywords = ["japanese", "kanji", "kana", "historical", "prewar", "hentaigana", "旧字体", "仮名遣い", "変体仮名"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Japanese",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/senzen_word"]
